tests/golden/type_errors/named_payload_mixed_declaration.cd
enum Result { Ok(value: number, string), Empty }
