tests/golden/type_errors/named_payload_mixed_declaration.err
Type error at 1:15: enum variant Result.Ok must use either all named or all positional payloads
  enum Result { Ok(value: number, string), Empty }
                ^
